2022-01-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/ios-dev-sub.c (ios_dev_sub_handler_normalize): Fix error
	reporting.

2022-01-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.c (_decl): Allow re-registering types.
	* libpoke/pkl-tab.y (load_module): Allow loading the same module
	more than once.
	* libpoke/pkl.c (pkl_add_module): Do not add module to the list if
	it is already loaded.
	* testsuite/poke.pkl/load-3.pk: Remove test.
	* testsuite/Makefile.am (EXTRA_DIST): Remove test load-3.pk.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.pk: New field `indent'.
	(Pk_Table.print_table): Use `indent'.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (pk_print_version): Update copyright year.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (pk_print_version): Update copyright year.

2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_pr_func): Add the name of the
	function to its type.
	* testsuite/poke.pkl/typeof-23.pk: New test.
	* testsuite/poke.pkl/typeof-24.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-01-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (Casting Arrays): Add documentation for
	array integrators.

2022-01-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans2_ps_op_attr): New phase for
	computing attributes of complete type at compile-time.
	(struct pkl_phase pkl_phase_trans2): Register new phase.
	* testsuite/poke.map/map-size-2.pk: New test.
	* testsuite/poke.map/map-size-3.pk: Likewise.
	* testsuite/poke.map/maps-structs-pinned-3.pk: Likewise.
	* testsuite/poke.pkl/attr-length-10.pk: Likewise.
	* testsuite/poke.pkl/attr-length-11.pk: Likewise.
	* testsuite/poke.pkl/attr-size-15.pk: Likewise.
	* testsuite/poke.pkl/attr-size-16.pk: Likewise.
	* testsuite/poke.pkl/attr-size-17.pk: Likewise.
	* testsuite/poke.pkl/attr-size-18.pk: Likewise.